--- a/app01/.vscode/settings.json
+++ b/app01/.vscode/settings.json
@@ -1,11 +1,12 @@
 {
   "css.lint.unknownAtRules": "ignore",
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  // "prettier.configPath": ".prettierrc",
+  // "prettier.configPath": "../.prettierrc",
   "emmet.triggerExpansionOnTab": true,
   "emmet.includeLanguages": {
     "javascript": "javascriptreact"
   },
   "prettier.requireConfig": true,
-  "rest-client.rememberCookiesForSubsequentRequests": true
+  "rest-client.rememberCookiesForSubsequentRequests": true,
+  "eslint.workingDirectories": ["./client", "backend"]
 }
